zh/api-reference/v2/webhooks/overview.mdx
---
title: "概览与安全验证"
description: "了解 Arisk V2 Webhook 的基本原理以及如何验证推送消息的安全性。"
---

Arisk V2 通过 Webhook 向您配置的服务器发送实时 HTTP POST 请求，通知监控地址的风险等级变动或风险交易。

## 安全性验证

为确保消息来源的真实性和完整性，Arisk 发送的每个 Webhook 请求都包含数字签名。我们强烈建议您在处理请求前进行验证。

### HTTP 请求头

每个 Webhook 请求都会包含以下关键 Header：

| Header | 说明 | 示例 |
| :--- | :--- | :--- |
| **X-Arisk-Signature** | RSA-PSS 数字签名（Base64 编码） | `aGVsbG8gd29ybGQ=...` |
| **Authorization** | Bearer Token（仅在配置了 `auth_key` 时存在） | `Bearer your-secret-token` |

### 验证步骤

1.  **验证签名（必须）**
    *   **算法**: RSA-PSS with SHA-256
    *   **签名内容**: 请求 Body 的原始 JSON 字符串
    *   **公钥**: 使用下方的 Arisk RSA 公钥验证 `X-Arisk-Signature` 中的签名。

<CodeGroup>
```text 公钥 (PEM)
-----BEGIN PUBLIC KEY-----
MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAy4SlJTdScP1YAtUqJ1Kz
vB7isAMYd5oeAUqtraQ2UeLTz8EnPAVgob88NwxnXENd/GWkzas18bjkEbZuPcYA
P+6cG5l077/zO8WCgUe+NheJUMYdLinvNovXB4oaPZ9EOSUPARyhupH+E5+Kr2Te
nn+q0wsq62ge6oo705FpJSePbtAQLUnpQYe9GDty50nuXTZ3dZgIMpFkgPI49viY
R0R72kC0l28BH/Ea9WxibKQuVngVMoK7/kLHNV93AEX5Rk1tUX+W/iKurhwxN1ei
1N9rBj0d6fupntF8RgDL7vhMa6JtZEnhscTvGZH8bPa2LXMsXVxTdeSZL9+ElFxK
awIDAQAB
-----END PUBLIC KEY-----
```
</CodeGroup>

2.  **验证 Authorization（可选）**
    如果您在 Webhook 配置中设置了 `auth_key`，Arisk 会在 Header 中添加：
    `Authorization: Bearer <您的 auth_key>`

---

## 最佳实践

- **快速响应（必选）**
  您的服务器在接收到 Webhook 请求后，应立即返回 HTTP 200 OK 状态码。
  - **返回数据**：响应体（Body）可以是空内容，也可以是一个简单的 JSON（例如 `{"message": "received"}`）。我们的服务仅校验 HTTP 状态码，不会解析响应体内容。
  - **超时风险**：请尽量避免在同步请求中执行耗时操作，否则可能触发发送端的超时重试机制（默认超时通常较短）。

- **异步处理（推荐）**
  建议采用“先确认，后处理”的策略。即在校验签名通过并接收数据后，立即返回 HTTP 200 响应，随后将耗时的业务逻辑（如写库、级联通知等）放入后台队列异步处理，以确保接口的高可用性。

- **幂等性保障（关键）**
  受网络波动或重试机制影响，您可能会收到重复的 Webhook 通知。请务必在业务层利用 Payload 中的 `alert.id` 字段作为唯一键进行幂等检查。
